added new aggregate API where XRP gets summed up + changed count api + added "top tipper" to count api
