# routes/count.ts
@@ -3,15 +3,15 @@ import * as db from '../db';
 
 var tipbotModel: Model<any>;
 
-export async function registerRoute(fastify, opts, next) {
+export async function registerRoutes(fastify, opts, next) {
     fastify.get('/count', async (request, reply) => {
-        console.log("query params: " + JSON.stringify(request.query));
+        console.log("query params for /count: " + JSON.stringify(request.query));
         try {
-            let countResult = await getCount(JSON.stringify(request.query));
-            console.log("countResult: " + JSON.stringify(countResult));
-            if(countResult>=0) {
-                console.log("number of documents with filter: '" + JSON.stringify(request.query)+ "' is: "+ countResult);
-                return { count: countResult}
+            let countResult = await Count(JSON.stringify(request.query), { _id: null, count: { $sum: 1 }}, {count:-1});
+            //console.log("aggregate xrp Result: " + JSON.stringify(aggregateResult));
+            if(countResult.length>=0) {
+                console.log("number of documents with filter: '" + JSON.stringify(request.query)+ "' is: "+ countResult[0].count);
+                return { count: countResult[0].count}
             } else {
                 reply.code(500).send('Something went wrong. Please check your query params');  
             }
@@ -19,6 +19,41 @@ export async function registerRoute(fastify, opts, next) {
             reply.code(500).send('Something went wrong. Please check your query params');
         }
     });
+
+    fastify.get('/count/mostReceivedFrom', async (request, reply) => {
+        console.log("query params for /count/mostReceivedFrom: " + JSON.stringify(request.query));
+        try {
+            request.query.user_id = {"$ne":null}
+            let countResult = await Count(JSON.stringify(request.query), { _id: "$user_id", count: {"$sum": 1}},{count:-1});
+            //console.log("aggregate xrp Result: " + JSON.stringify(aggregateResult));
+            if(countResult.length>=0) {
+                console.log("number of documents with filter: '" + JSON.stringify(request.query)+ "' is: "+ countResult.length);
+                return { result: countResult}
+            } else {
+                reply.code(500).send('Something went wrong. Please check your query params');  
+            }
+        } catch {
+            reply.code(500).send('Something went wrong. Please check your query params');
+        }
+    });
+
+    fastify.get('/count/mostSentTo', async (request, reply) => {
+        console.log("query params for /count/mostSentTo: " + JSON.stringify(request.query));
+        try {
+            request.query.to_id = {"$ne":null}
+            let countResult = await Count(JSON.stringify(request.query), { _id: "$to_id", count: {"$sum": 1}},{count:-1});
+            //console.log("aggregate xrp Result: " + JSON.stringify(aggregateResult));
+            if(countResult.length>=0) {
+                console.log("number of documents with filter: '" + JSON.stringify(request.query)+ "' is: "+ countResult.length);
+                return { result: countResult}
+            } else {
+                reply.code(500).send('Something went wrong. Please check your query params');  
+            }
+        } catch {
+            reply.code(500).send('Something went wrong. Please check your query params');
+        }
+    });
+
     next()
 }
 
@@ -26,13 +61,21 @@ export async function init() {
     tipbotModel = await db.getNewDbModelTips();
 }
 
-async function getCount(filter:any): Promise<number> {
+async function Count(filter:any, groupOptions: any, sortOptions?: any): Promise<any> {
     filter = JSON.parse(filter);
     
     let failedResult:number = -1;
     if(tipbotModel) {
         try {
             let filterWithOperatorAnd:any[] = [];
+            let limit:number= 1000000;
+            if(filter.limit) {
+                limit = parseInt(filter.limit);
+                if(isNaN(limit) || limit==0)
+                    return failedResult;
+
+                delete filter.limit;
+            }
 
             let from_date:Date;
             if(filter.from_date) {
@@ -55,15 +98,16 @@ async function getCount(filter:any): Promise<number> {
             } else
                 finalFilter = filter;
 
-            console.log("Calling count db with filter: " + JSON.stringify(finalFilter));
-            let mongoResult:number;
-            if(finalFilter.length <=2)
-                mongoResult = await tipbotModel.estimatedDocumentCount().exec();
-            else
-                mongoResult = await tipbotModel.countDocuments(finalFilter).exec();
+            console.log("Calling aggregate db with filter: " + JSON.stringify(finalFilter));
+            let mongoResult = await tipbotModel.aggregate([
+                { $match: finalFilter },
+                { $group: groupOptions }
+            ]).sort(sortOptions).limit(limit).exec();
 
-            if(mongoResult || mongoResult===0)
-                return mongoResult
+            //console.log("aggregate result: " + JSON.stringify(mongoResult));
+
+            if(mongoResult && mongoResult.length>0)
+                return mongoResult;
             else
                 return failedResult;
         } catch(err) {
